# chainsawKernel

./: .gitignore
kernel/: Cargo.toml  build.rs  limine.conf  linker.ld  makefile
kernel/.cargo/: config.toml
kernel/src/: db_font.rs  debuglog.rs  io.rs  main.rs  math.rs  memory.rs  pmm.rs  tensors.rs  terminal.rs  timer.rs  video.rs
tools/fontGenerator/: Cargo.toml  db_font.rs
tools/fontGenerator/src/: main.rs
